fix dune file and add for test

--- a/src/dune
+++ b/src/dune
@@ -2,4 +2,4 @@
  (name Server)
  (public_name reason_websocket.server)
  (modules :standard \ Test Socket)
- (libraries threads))
+ (libraries str threads))
